--- a/css/style2.css
+++ b/css/style2.css
@@ -8,6 +8,7 @@ body{
 	padding:0;
 }
 footer{
+    font-size: 8px;
 	clear: both;
 	padding:20px 0px;
 	text-align:center;
@@ -17,10 +18,38 @@ a{
     text-decoration: none;
 }
 aside{
+    width: 18%;
 	position: fixed;
-	right: 10px;
-	bottom: 10px;
+	left: 15px;
+	top: 250px;
 	z-index: 999999;
+
+    background-color: #010910;
+    border: 1px solid #e2e2e2;
+    font-size: 10px;
+}
+.top{
+    box-sizing: border-box;
+    padding: 10px;
+    color: #e2e2e2;
+    text-align: center;
+    font-size: 16px;
+}
+.top a{
+    color: #e2e2e2;
+}
+.top a:hover{
+    color: #a85c02;
+}
+aside ul a{
+    color: #e2e2e2;
+}
+aside ul a:hover{
+    color: #a85c02;
+}
+.category{
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 #heading{
@@ -83,27 +112,12 @@ nav li span{
 }
 
 /*blog structure*/
-.blog{
+#blog{
     display: flex;
     flex-direction: column;
     
     text-align: center;
     justify-content: center;
-}
-.blog_heading{
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    text-align: center;
-}
-.blog_heading span{
-    margin: 10px 0px 0px 0px;
-    color: #b79683;
-}
-.blog_heading h3{
-    font-size: 30px;
-    color: #e2e2e2;
 }
 .blog_container{
     display: flex;
@@ -111,12 +125,12 @@ nav li span{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 20px;
 }
 
 /*article*/
 .box{
-    width: 50%;
-    padding: 25px;
+    width: 60%;
 }
 .box_img{
     width: 100%;
@@ -128,11 +142,19 @@ nav li span{
     object-fit: cover;
     object-position: center;
 }
+.box_heading{
+    display: flex;
+    flex-direction: column;
+    
+    padding: 0px;
+    text-align: left;
+    color: #b79683;
+}
 .box_text{
     display: flex;
     flex-direction: column;
     
-    padding: 25px;
+    padding: 0px;
     text-align: left;
 }
 .box_annotation{
@@ -150,17 +172,4 @@ nav li span{
     color: #a85c02
 }
 
-/*return buttom*/
-/*
-.return_home{
-	width: 44px;
-	height: 44px;
-	background: #010910 url(../assets/return.png) no-repeat; 
-	background-size: 200%;
-	background-position: 0px 0px;
-}
-.return_home:hover{
-	background: #010910 url(../assets/return.png) no-repeat;
-	background-size: 200%;
-	background-position: -44px 0px;
-}*/
+
